<resources>
    <string name="app_name">Tour Guide App</string>
    <string name="city_name">Madrid</string>
    <string name="category_1">Culture</string>
    <string name="category_2">Shopping</string>
    <string name="category_3">Food</string>
    <string name="category_4">Leisure</string>
    <string name="category_extended_1">Culture in</string>
    <string name="category_extended_2">Shopping in</string>
    <string name="category_extended_3">Restaurants in</string>
    <string name="category_extended_4">Leisure in</string>
    <string name="full_screen_advice">Tap image to go back</string>
    <string name="content_description_main_image">Main image</string>
    <string name="content_description_category_1">Culture in Madrid</string>
    <string name="content_description_category_2">Shopping in Madrid</string>
    <string name="content_description_category_3">Restaurants in Madrid</string>
    <string name="content_description_category_4">Leisure in Madrid</string>
    <string name="content_description_location_icon">Location thumbnail</string>
    <string name="content_description_search_icon">More info</string>
    <string name="content_description_exit_icon">Go to</string>
    <string name="content_description_address_icon">Address</string>
    <string name="content_description_web_icon">Web page</string>
    <string name="content_description_contact_icon">Contact</string>
    <string name="content_description_timetable_icon">Timetable</string>
    <string name="location_id_1_1">1</string>
    <string name="location_name_1_1">Museo del Prado</string>
    <string name="location_thumbnail_1_1">thumbnail_museo_prado</string>
    <string name="location_image_1_1">location_museo_prado</string>
    <string name="location_address_1_1">Paseo del Prado, s/n, 28014 Madrid</string>
    <string name="location_timetable_1_1">Monday&#8211;Saturday 10.00&#8211;20.00</string>
    <string name="location_contact_1_1">(+34) 911 111 111</string>
    <string name="location_web_1_1">http://museodelprado.es</string>
    <string name="location_description_1_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pellentesque metus in vehicula iaculis. Aenean pulvinar diam neque, in interdum sem malesuada ut. Donec varius libero vel mi convallis, non accumsan nibh aliquam. Morbi ultricies suscipit neque eu egestas. Nulla efficitur ex et porttitor vestibulum. Vestibulum scelerisque eleifend justo non mollis. \n\nMaecenas congue, tellus sit amet ultricies mattis, quam risus hendrerit velit, vel ultricies dui magna nec dolor. Nunc est justo, congue ut justo vitae, eleifend sollicitudin neque. Ut placerat nunc quis purus imperdiet ornare. Etiam a egestas risus, quis egestas dolor. Ut hendrerit dictum metus nec pretium. Nulla hendrerit, est pellentesque pulvinar mattis, mi orci dignissim mauris, sit amet interdum nisi massa eu justo. Sed ante risus, condimentum et pretium vitae, tempus non tellus. Integer nec nisi in eros varius lobortis vel at purus. Proin ante dui, pretium et mollis eu, pharetra eu mauris. Sed finibus, sapien vitae consectetur vulputate, nisi velit pretium eros, vel consectetur augue risus sed diam.\n\nNulla accumsan bibendum commodo. Suspendisse et ornare enim. Nam viverra augue ut gravida ullamcorper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed congue porttitor velit, sit amet feugiat lacus faucibus vitae. Duis posuere fringilla dolor, eu feugiat est volutpat et. Morbi commodo, ante quis varius pellentesque, urna nibh viverra diam, eu faucibus turpis nisl at eros. \n\nMorbi at ligula lacinia, malesuada magna a, consequat mauris. Proin placerat imperdiet orci, finibus semper risus luctus vitae. Phasellus a scelerisque urna, in vulputate tellus. Quisque non nisl gravida, pharetra est eget, accumsan dui. Aenean vel rhoncus lacus, a lobortis massa. Donec ornare, massa eu convallis elementum, velit velit hendrerit diam, sed consequat risus ante vitae leo. Pellentesque ac maximus arcu. Quisque dictum pulvinar vehicula. Morbi a auctor libero, sed elementum nulla.</string>
    <string name="location_id_1_2">2</string>
    <string name="location_name_1_2">Museo Thyssen&#8211;Bornemisza</string>
    <string name="location_thumbnail_1_2">thumbnail_museo_thyssen</string>
    <string name="location_image_1_2">location_museo_thyssen</string>
    <string name="location_address_1_2">Sample Street 1, 00000 Madrid, Spain</string>
    <string name="location_timetable_1_2">Monday&#8211;Saturday 10.00 &#8211; 20.00</string>
    <string name="location_contact_1_2">(+34) 911 111 111</string>
    <string name="location_web_1_2">http://www.android.com</string>
    <string name="location_description_1_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pellentesque metus in vehicula iaculis. Aenean pulvinar diam neque, in interdum sem malesuada ut. Donec varius libero vel mi convallis, non accumsan nibh aliquam. Morbi ultricies suscipit neque eu egestas. Nulla efficitur ex et porttitor vestibulum. Vestibulum scelerisque eleifend justo non mollis. \n\nMaecenas congue, tellus sit amet ultricies mattis, quam risus hendrerit velit, vel ultricies dui magna nec dolor. Nunc est justo, congue ut justo vitae, eleifend sollicitudin neque. Ut placerat nunc quis purus imperdiet ornare. Etiam a egestas risus, quis egestas dolor. Ut hendrerit dictum metus nec pretium. Nulla hendrerit, est pellentesque pulvinar mattis, mi orci dignissim mauris, sit amet interdum nisi massa eu justo. Sed ante risus, condimentum et pretium vitae, tempus non tellus. Integer nec nisi in eros varius lobortis vel at purus. Proin ante dui, pretium et mollis eu, pharetra eu mauris. Sed finibus, sapien vitae consectetur vulputate, nisi velit pretium eros, vel consectetur augue risus sed diam.\n\nNulla accumsan bibendum commodo. Suspendisse et ornare enim. Nam viverra augue ut gravida ullamcorper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed congue porttitor velit, sit amet feugiat lacus faucibus vitae. Duis posuere fringilla dolor, eu feugiat est volutpat et. Morbi commodo, ante quis varius pellentesque, urna nibh viverra diam, eu faucibus turpis nisl at eros. \n\nMorbi at ligula lacinia, malesuada magna a, consequat mauris. Proin placerat imperdiet orci, finibus semper risus luctus vitae. Phasellus a scelerisque urna, in vulputate tellus. Quisque non nisl gravida, pharetra est eget, accumsan dui. Aenean vel rhoncus lacus, a lobortis massa. Donec ornare, massa eu convallis elementum, velit velit hendrerit diam, sed consequat risus ante vitae leo. Pellentesque ac maximus arcu. Quisque dictum pulvinar vehicula. Morbi a auctor libero, sed elementum nulla.</string>
    <string name="location_id_1_3">3</string>
    <string name="location_name_1_3">Museo Nacional Centro de Arte Reina Sofía</string>
    <string name="location_thumbnail_1_3">thumbnail_reina_sofia</string>
    <string name="location_image_1_3">location_reina_sofia</string>
    <string name="location_address_1_3">Sample Street 1, 00000 Madrid, Spain</string>
    <string name="location_timetable_1_3">Monday&#8211;Saturday 10.00 &#8211; 20.00</string>
    <string name="location_contact_1_3">(+34) 911 111 111</string>
    <string name="location_web_1_3">http://www.android.com</string>
    <string name="location_description_1_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pellentesque metus in vehicula iaculis. Aenean pulvinar diam neque, in interdum sem malesuada ut. Donec varius libero vel mi convallis, non accumsan nibh aliquam. Morbi ultricies suscipit neque eu egestas. Nulla efficitur ex et porttitor vestibulum. Vestibulum scelerisque eleifend justo non mollis. \n\nMaecenas congue, tellus sit amet ultricies mattis, quam risus hendrerit velit, vel ultricies dui magna nec dolor. Nunc est justo, congue ut justo vitae, eleifend sollicitudin neque. Ut placerat nunc quis purus imperdiet ornare. Etiam a egestas risus, quis egestas dolor. Ut hendrerit dictum metus nec pretium. Nulla hendrerit, est pellentesque pulvinar mattis, mi orci dignissim mauris, sit amet interdum nisi massa eu justo. Sed ante risus, condimentum et pretium vitae, tempus non tellus. Integer nec nisi in eros varius lobortis vel at purus. Proin ante dui, pretium et mollis eu, pharetra eu mauris. Sed finibus, sapien vitae consectetur vulputate, nisi velit pretium eros, vel consectetur augue risus sed diam.\n\nNulla accumsan bibendum commodo. Suspendisse et ornare enim. Nam viverra augue ut gravida ullamcorper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed congue porttitor velit, sit amet feugiat lacus faucibus vitae. Duis posuere fringilla dolor, eu feugiat est volutpat et. Morbi commodo, ante quis varius pellentesque, urna nibh viverra diam, eu faucibus turpis nisl at eros. \n\nMorbi at ligula lacinia, malesuada magna a, consequat mauris. Proin placerat imperdiet orci, finibus semper risus luctus vitae. Phasellus a scelerisque urna, in vulputate tellus. Quisque non nisl gravida, pharetra est eget, accumsan dui. Aenean vel rhoncus lacus, a lobortis massa. Donec ornare, massa eu convallis elementum, velit velit hendrerit diam, sed consequat risus ante vitae leo. Pellentesque ac maximus arcu. Quisque dictum pulvinar vehicula. Morbi a auctor libero, sed elementum nulla.</string>
    <string name="location_id_1_4">4</string>
    <string name="location_name_1_4">Palacio Real de Madrid</string>
    <string name="location_thumbnail_1_4">thumbnail_palacio_real</string>
    <string name="location_image_1_4">location_palacio_real</string>
    <string name="location_address_1_4">Sample Street 1, 00000 Madrid, Spain</string>
    <string name="location_timetable_1_4">Monday&#8211;Saturday 10.00 &#8211; 20.00</string>
    <string name="location_contact_1_4">(+34) 911 111 111</string>
    <string name="location_web_1_4">http://www.android.com</string>
    <string name="location_description_1_4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pellentesque metus in vehicula iaculis. Aenean pulvinar diam neque, in interdum sem malesuada ut. Donec varius libero vel mi convallis, non accumsan nibh aliquam. Morbi ultricies suscipit neque eu egestas. Nulla efficitur ex et porttitor vestibulum. Vestibulum scelerisque eleifend justo non mollis. \n\nMaecenas congue, tellus sit amet ultricies mattis, quam risus hendrerit velit, vel ultricies dui magna nec dolor. Nunc est justo, congue ut justo vitae, eleifend sollicitudin neque. Ut placerat nunc quis purus imperdiet ornare. Etiam a egestas risus, quis egestas dolor. Ut hendrerit dictum metus nec pretium. Nulla hendrerit, est pellentesque pulvinar mattis, mi orci dignissim mauris, sit amet interdum nisi massa eu justo. Sed ante risus, condimentum et pretium vitae, tempus non tellus. Integer nec nisi in eros varius lobortis vel at purus. Proin ante dui, pretium et mollis eu, pharetra eu mauris. Sed finibus, sapien vitae consectetur vulputate, nisi velit pretium eros, vel consectetur augue risus sed diam.\n\nNulla accumsan bibendum commodo. Suspendisse et ornare enim. Nam viverra augue ut gravida ullamcorper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed congue porttitor velit, sit amet feugiat lacus faucibus vitae. Duis posuere fringilla dolor, eu feugiat est volutpat et. Morbi commodo, ante quis varius pellentesque, urna nibh viverra diam, eu faucibus turpis nisl at eros. \n\nMorbi at ligula lacinia, malesuada magna a, consequat mauris. Proin placerat imperdiet orci, finibus semper risus luctus vitae. Phasellus a scelerisque urna, in vulputate tellus. Quisque non nisl gravida, pharetra est eget, accumsan dui. Aenean vel rhoncus lacus, a lobortis massa. Donec ornare, massa eu convallis elementum, velit velit hendrerit diam, sed consequat risus ante vitae leo. Pellentesque ac maximus arcu. Quisque dictum pulvinar vehicula. Morbi a auctor libero, sed elementum nulla.</string>
    <string name="location_id_1_5">5</string>
</resources>