<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainLayout"
    android:orientation="vertical"
    tools:context="com.example.android.tourguideapp.MainActivity">

    <ImageView
        android:id="@+id/main_background_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="2"
        android:scaleType="centerCrop"
        android:src="@drawable/activity_main_bg_02" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/MainTitle"
            android:text="@string/city_name" />

        <TextView
            style="@style/MainSubtitle"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/main_info_category"
            style="@style/MainCategoryLayout">

            <ImageView
                style="@style/MainCategoryImage"
                android:src="@drawable/category_1" />

            <TextView
                style="@style/MainCategoryTitle"
                android:text="@string/category_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_culture_category"
            style="@style/MainCategoryLayout">

            <ImageView
                style="@style/MainCategoryImage"
                android:src="@drawable/category_2" />

            <TextView
                style="@style/MainCategoryTitle"
                android:text="@string/category_2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_food_category"
            style="@style/MainCategoryLayout">

            <ImageView
                style="@style/MainCategoryImage"
                android:src="@drawable/category_3" />

            <TextView
                style="@style/MainCategoryTitle"
                android:text="@string/category_3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_leisure_category"
            style="@style/MainCategoryLayout">

            <ImageView
                style="@style/MainCategoryImage"
                android:src="@drawable/category_4" />

            <TextView
                style="@style/MainCategoryTitle"
                android:text="@string/category_4" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
